--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.6.2
 click==8.1.3
 Flask==2.3.2
-Frozen-Flask==0.18
+gunicorn==19.7.1
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
