--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,16 +1,23 @@
 blinker==1.6.2
+category-encoders==2.6.1
 click==8.1.3
 Flask==2.3.2
-gunicorn==19.7.1
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
 MarkupSafe==2.1.3
 numpy==1.24.3
+packaging==23.1
+pandas==2.0.2
+patsy==0.5.3
+python-dateutil==2.8.2
+pytz==2023.3
 scikit-learn==1.2.2
 scipy==1.10.1
+six==1.16.0
+statsmodels==0.14.0
 threadpoolctl==3.1.0
+tzdata==2023.3
 Werkzeug==2.3.4
 zipp==3.15.0
-pandas==1.5.3
